# htsget-elsa-rs

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  README.md
.github/workflows/: tests.yml
data/events/: event_elsa.json  event_get.json
deploy/: .gitignore  README.md  cdk.json  package-lock.json  package.json
deploy/config/: config_dev_umccr.toml
deploy/lib/: htsget-elsa-lambda-stack.ts
docs/example/: README.md
htsget-elsa/: Cargo.toml  README.md
htsget-elsa-lambda/: Cargo.toml  README.md
htsget-elsa-lambda/src/: config.rs  lib.rs  main.rs
htsget-elsa/src/: dynamodb.rs  elsa_endpoint.rs  lib.rs  s3.rs  test_utils.rs
