[package]
name = "htsget-elsa-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
lambda_http = { version = "0.7" }
serde = { version = "1.0" }
serde_json = "1.0"
tracing = "0.1"
http-serde = "1.1"
http = "0.2"

htsget-config = { git = "https://github.com/umccr/htsget-rs.git", branch = "feat/htsget-elsa"}
htsget-lambda = { git = "https://github.com/umccr/htsget-rs.git", branch = "feat/htsget-elsa"}