[package]
name = "htsget-elsa-lambda"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
description = "A lambda function for htsget-rs to communicate with Elsa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
lambda_http = { version = "0.8" }
serde = { version = "1.0" }
serde_json = "1.0"
tracing = "0.1"
http-serde = "1.1"
http = "0.2"

htsget-config = { version = "0.7.1", features = ["s3-storage"] }
htsget-lambda = { version = "0.4.9", features = ["s3-storage"] }

htsget-elsa = { version = "0.1", path = "../htsget-elsa" }

[dev-dependencies]
htsget-elsa = { version = "0.1", path = "../htsget-elsa", features = ["test-utils"] }
htsget-search = { version = "0.6.2", features = ["s3-storage"] }
htsget-test = { version = "0.5.2", features = ["http-tests", "s3-storage"] }
