[package]
name = "htsget-elsa"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
http = "0.2"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
thiserror = "1.0"
aws-config = "0.54"
aws-sdk-s3 = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
bytes = "1.4"
tracing = "0.1"

htsget-config = { git = "https://github.com/umccr/htsget-rs.git", branch = "feat/htsget-elsa" }

[dev-dependencies]
htsget-test = { git = "https://github.com/umccr/htsget-rs.git", branch = "feat/htsget-elsa", features = ["aws-mocks"] }

tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
mockito = "1.0"
wiremock = "0.5"