[package]
name = "htsget-elsa"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
version = "0.1.0"
edition = "2021"

[features]

test-utils = ["htsget-test", "wiremock"]
default = []

[dependencies]
async-trait = "0.1"
http = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "1.0"
aws-config = "0.54"
aws-sdk-s3 = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
bytes = "1.4"
tracing = "0.1"

htsget-config = { git = "https://github.com/umccr/htsget-rs.git", branch = "feat/htsget-elsa" }

htsget-test = { git = "https://github.com/umccr/htsget-rs.git", optional = true, branch = "feat/htsget-elsa", features = ["aws-mocks"] }
wiremock = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }

htsget-elsa = { path = ".", features = ["test-utils"] }