[package]
name = "htsget-elsa"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
description = "The htsget-rs library code used to interact with Elsa"
version = "0.1.0"
edition = "2021"

[features]
test-utils = ["htsget-test", "wiremock"]
default = []

[dependencies]
async-trait = "0.1"
http = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
bytes = "1.4"
tracing = "0.1"

htsget-config = { version = "0.7.1", features = ["s3-storage"] }

htsget-test = { version = "0.5.2", features = ["aws-mocks", "s3-storage"], optional = true }
wiremock = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }

htsget-elsa = { path = ".", features = ["test-utils"] }
